manifests/deploy-init-container-requests.yaml
# deploy this on a single cluster 4GB node (https://killercoda.com/playgrounds/course/kubernetes-playgrounds/one-node-4GB)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: overloaded
spec:
  replicas: 3
  selector:
    matchLabels:
      app: overloaded
  template:
    metadata:
      labels:
        app: overloaded
    spec:
      containers:
        - name: main
          image: nginx
          resources:
            requests:
              cpu: "250m"
              memory: "600Mi"
