manifests/pod-logging-sidecar.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-sidecar-log
spec:
  containers:
  - image: busybox
    name: main
  args:
    - /bin/sh
    - -c
    - >
    while true;
    do
    echo "$(date)\n" >> /var/log/main-container.log;
    sleep 5;
    done
    volumeMounts:
      - name: varlog
        mountPath: /var/log
  - name: sidecar
    image: busybox
    args: [ /bin/sh, -c, 'tail -f /var/log/main-container.log' ]
    volumeMounts:
      - name: varlog
        mountPath: /var/log
  volumes:
    - name: varlog
      emptyDir: {}
