manifests/pod-node-affinity.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: affinity
  name: affinity
spec:
  containers:
  - image: nginx
    name: affinity
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
        - matchExpressions:
          - key: kubernetes.io/os
            operator: In
            values:
            - linux
      preferredDuringSchedulingIgnoredDuringExecution:
      - weight: 1
        preference:
          matchExpressions:
          - key: disktype 
            operator: In
            values:
            - ssd
