manifests/pod-tolerate.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: pod-tolerate
  name: pod-tolerate
spec:
  tolerations:
  - key: "dedicated"
    value: "special-user"
    effect: "NoSchedule"
  containers:
  - image: nginx
    name: pod-tolerate
  dnsPolicy: ClusterFirst
  restartPolicy: Always
