manifests/deploy-nginx-run.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deploy
  labels:
    run: nginx
  namespace: web
spec:
  replicas: 2
  selector:
    matchLabels:
      run: nginx
  template:
    metadata:
      labels:
        run: nginx
    spec:
      containers:
      - image: nginx
        name: nginx
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: internal-svc
spec:
  selector:
    run: nginx
  ports:
  - protocol: TCP
    targetPort: 80
    port: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: nodeport-svc
spec:
  selector:
    run: nginx
  ports:
  - protocol: TCP
    targetPort: 80
    port: 8080
    nodePort: 31020
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: loadbalancer-svc
spec:
  selector:
    run: nginx
  ports:
  - protocol: TCP
    targetPort: 80
    port: 8080
    nodePort: 31020
  type: LoadBalancer
