manifests/ing-nginx.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
spec:
  rules:
    - host: example.com
      http:
        paths:
          - path: /app1
            backend:
              serviceName: nginx
              servicePort: 8080
