manifests/ingress-simple2.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing-web-frontend
spec:
  rules:
  - http:
      paths:
      - path: /shop
        pathType: Prefix
        backend:
          service:
            name: svc-web-frontend
            port:
              number: 80
