manifests/nginx-ingress3.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: your-domain-goes-here.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-cip-svc
            port:
              number: 8080
